package org.gruppeEins;

public enum ChargingStatus
{
    IN_OPERATION_FREE,
    IN_OPERATION_OCCUPIED,
    OUT_OF_ORDER
}
