package org.gruppeEins;

public enum ChargingType {
  AC,
  DC
}
